[gd_scene load_steps=4 format=3 uid="uid://bfqx2ov3bib3u"]

[ext_resource type="Script" uid="uid://c1016g1006mjr" path="res://scenes/zones/zone_info_panel/zone_info_panel.gd" id="1_rt5e4"]
[ext_resource type="StyleBox" uid="uid://boptycq5huc3t" path="res://assets/styleboxes/zone_info_panel_subsection.tres" id="2_lgamx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lgamx"]

[node name="ZoneInfoPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_lgamx")
script = ExtResource("1_rt5e4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ZoneInfoContent" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ZoneInfoContent"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_lgamx")

[node name="ZoneHeaderSection" type="VBoxContainer" parent="MarginContainer/ZoneInfoContent/PanelContainer"]
layout_mode = 2

[node name="ZoneTitle" type="RichTextLabel" parent="MarginContainer/ZoneInfoContent/PanelContainer/ZoneHeaderSection"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Current Zone: Sacred Valley"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ZoneInfoContent/PanelContainer/ZoneHeaderSection"]
layout_mode = 2

[node name="ZoneDescription" type="RichTextLabel" parent="MarginContainer/ZoneInfoContent/PanelContainer/ZoneHeaderSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="ActionsSection" type="VBoxContainer" parent="MarginContainer/ZoneInfoContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ZoneInfoContent/ActionsSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_lgamx")

[node name="ActionsScrollContainer" type="ScrollContainer" parent="MarginContainer/ZoneInfoContent/ActionsSection/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionsContent" type="VBoxContainer" parent="MarginContainer/ZoneInfoContent/ActionsSection/PanelContainer/ActionsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
